@@ -23,6 +23,9 @@ namespace ContractConfigurator
             // Load base class
             bool valid = base.Load(configNode);
 
+            // Check on active contracts too
+            checkOnActiveContract = configNode.HasValue("checkOnActiveContract") ? checkOnActiveContract : true;
+
             // Get trait
             valid &= ConfigNodeUtil.ValidateMandatoryField(configNode, "facility", this);
             if (valid)
