@@ -7,6 +7,7 @@ Contract Configurator 0.4.0
 - Added SCANsatCoverage parameter and requirement (big thanks @tattagreis on the SCANsat integration).
 - Fixed a bug in the HasPart parameter for parts with an underscore in the name (thanks @tattagreis).
 - Improved HasCrew now errors if minCrew > maxCrew (thanks @tattagreis).
+- Most requirements are no longer checked on active contracts.  Exposed attribute to override default behaviour through config file (thanks @scerion).
 
 Contract Configurator 0.3.3
 - Persistant data store can now store config nodes.
